k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mobigen
  labels:
    app.kubernetes.io/name: mobigen
    app.kubernetes.io/part-of: mobigen
